--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,32 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%sveltekit.assets%/core-logo.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>CORE: Unit Balancer</title>
+        <meta
+            name="description"
+            content="A tool for balancing the units of the CORE game"
+        />
+        <meta
+            name="keywords"
+            content="A tool for balancing the units of the CORE game"
+        />
+        <link rel="stylesheet" href="%sveltekit.assets%/css/style.css" />
+        %sveltekit.head%
+    </head>
+    <body data-sveltekit-preload-data="hover">
+        <div style="display: contents">%sveltekit.body%</div>
+        <h4>
+            NOTE: Progress is not yet saved! (actually this page does nothing at
+            the moment)
+        </h4>
+    </body>
+    <footer>
+        <p><a href="https://coregame.de" target="_blank">Website</a></p>
+        <p>
+            <a href="https://github.com/42core-team" target="_blank">GitHub</a>
+        </p>
+    </footer>
 </html>
