--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         />
         <link rel="stylesheet" href="./css/style.css" />
         
-		<link href="./_app/immutable/assets/2.B3xz0T6z.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Cj6if8-Z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DFXknRBE.js">
+		<link href="./_app/immutable/assets/2.CcJCXt2a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DO98PRDM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/ChKMlUjY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKwCT-2V.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/XA67CygV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BOCOiN_C.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.O-RgW5p3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BPL95ivt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXQQPq_x.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BhOC1yYQ.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cmbb6xt-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D_aqvrkC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsZVBq84.js">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents"><!--[--><!--[--><!----><!----><img src="core-logo.png" alt="Logo" class="svelte-og8ads"> <h1>Unit Balancer</h1> <div class="unit-list svelte-og8ads"><!--[--><div class="unit svelte-og8ads"><img src="images/skeleton_basic_idle__0.png" alt="Warrior" class="svelte-og8ads"> <h3>Warrior</h3> <p class="svelte-og8ads">Cost: <input type="range" min="0" max="500" value="100"> 100</p> <p class="svelte-og8ads">Health: <input type="range" min="0" max="500" value="200"> 200</p> <p class="svelte-og8ads">Damage: <input type="range" min="0" max="200" value="50"> 50</p></div><div class="unit svelte-og8ads"><img src="images/skeleton_basic_idle__0.png" alt="Miner" class="svelte-og8ads"> <h3>Miner</h3> <p class="svelte-og8ads">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-og8ads">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-og8ads">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><div class="unit svelte-og8ads"><img src="images/skeleton_archer_idle__0.png" alt="Archer" class="svelte-og8ads"> <h3>Archer</h3> <p class="svelte-og8ads">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-og8ads">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-og8ads">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><div class="unit svelte-og8ads"><img src="images/skeleton_healer_idle__0.png" alt="Healer" class="svelte-og8ads"> <h3>Healer</h3> <p class="svelte-og8ads">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-og8ads">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-og8ads">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><div class="unit svelte-og8ads"><img src="images/skeleton_tank_idle__0.png" alt="Tank" class="svelte-og8ads"> <h3>Tank</h3> <p class="svelte-og8ads">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-og8ads">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-og8ads">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><!--]--></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div style="display: contents"><!--[--><!--[--><!----><!----><img id="logo" src="core-logo.png" alt="Logo" class="svelte-1ckxvab"> <h1>Unit Balancer</h1> <div class="unit-list svelte-1ckxvab"><!--[--><div class="unit svelte-1ckxvab"><img src="images/skeleton_basic_idle__0.png" alt="Warrior" class="svelte-1ckxvab"> <h3>Warrior</h3> <p class="svelte-1ckxvab">Cost: <input type="range" min="0" max="500" value="100"> 100</p> <p class="svelte-1ckxvab">Health: <input type="range" min="0" max="500" value="200"> 200</p> <p class="svelte-1ckxvab">Damage: <input type="range" min="0" max="200" value="50"> 50</p></div><div class="unit svelte-1ckxvab"><img src="images/skeleton_basic_idle__0.png" alt="Miner" class="svelte-1ckxvab"> <h3>Miner</h3> <p class="svelte-1ckxvab">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-1ckxvab">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-1ckxvab">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><div class="unit svelte-1ckxvab"><img src="images/skeleton_archer_idle__0.png" alt="Archer" class="svelte-1ckxvab"> <h3>Archer</h3> <p class="svelte-1ckxvab">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-1ckxvab">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-1ckxvab">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><div class="unit svelte-1ckxvab"><img src="images/skeleton_healer_idle__0.png" alt="Healer" class="svelte-1ckxvab"> <h3>Healer</h3> <p class="svelte-1ckxvab">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-1ckxvab">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-1ckxvab">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><div class="unit svelte-1ckxvab"><img src="images/skeleton_tank_idle__0.png" alt="Tank" class="svelte-1ckxvab"> <h3>Tank</h3> <p class="svelte-1ckxvab">Cost: <input type="range" min="0" max="500" value="80"> 80</p> <p class="svelte-1ckxvab">Health: <input type="range" min="0" max="500" value="150"> 150</p> <p class="svelte-1ckxvab">Damage: <input type="range" min="0" max="200" value="70"> 70</p></div><!--]--></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_3s0g55 = {
+					__sveltekit_1o494yf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/unit-balancer"
 					};
@@ -40,8 +40,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Cj6if8-Z.js"),
-						import("./_app/immutable/entry/app.BOCOiN_C.js")
+						import("./_app/immutable/entry/start.DO98PRDM.js"),
+						import("./_app/immutable/entry/app.O-RgW5p3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
