--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <link rel="stylesheet" href="./css/style.css" />
         
 		<link href="./_app/immutable/assets/2.CcJCXt2a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DO98PRDM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ChKMlUjY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DTUdcvMr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/nyfClp1q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DKwCT-2V.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/XA67CygV.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.O-RgW5p3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DblOxbun.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BPL95ivt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DXQQPq_x.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BhOC1yYQ.js">
@@ -32,7 +32,7 @@
 			
 			<script>
 				{
-					__sveltekit_1o494yf = {
+					__sveltekit_pe1j06 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/unit-balancer"
 					};
@@ -40,8 +40,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DO98PRDM.js"),
-						import("./_app/immutable/entry/app.O-RgW5p3.js")
+						import("./_app/immutable/entry/start.DTUdcvMr.js"),
+						import("./_app/immutable/entry/app.DblOxbun.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
